--- a/python by vishwa sir/google colab/Student_Copy_Datatypes ppt 2.ipynb
+++ b/python by vishwa sir/google colab/Student_Copy_Datatypes ppt 2.ipynb
@@ -2966,6 +2966,16 @@
       ]
     },
     {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "null_dict = {}\n",
+        "print(null_dict)"
+      ]
+    },
+    {
       "cell_type": "markdown",
       "metadata": {
         "id": "KIyGY2AhTF6a"
